--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Crypto App</title>
   </head>
   <body>
     <div id="root"></div>
