--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+
+    <meta name="author" content="Jiří Poledník" />
+    <meta
+      name="description"
+      content="Crypto App which shows cryptocurrencies, their prices, graph and change" />
+    <meta name="keywords" content="Crypto, Cryptocurrency, BlockChain, Bitcoin, Ethereum, BTC, ETH, exchange">
+
     <title>Crypto App</title>
   </head>
   <body>
